color and fonts

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 	
 	<div class="wrapper">
 		<section id="advantages" class="advantages">
-			<p class="description">Наша компания <span class="bold__font">ООО «КСАН»</span> предлагает <span class="bold__font">Ксантановую камедь</span> &ndash; жизненно важный полимер для пищевой, нефтегазовой, фармацевтической и косметической промышленности. На сегодняшний день 100% ксантана в России &ndash; импортное, что создает риски для стратегических отраслей.Новый, высокоэффективный изолят бактерии Xanthomonas campestris представляет собой штамм, обладающий улучшенными характеристиками по сравнению с ранее известными изолятами. Эта бактерия широко используется в биотехнологии благодаря своей способности продуцировать ряд ценных соединений, включая биополимеры, ферменты и биологически активные вещества.
+			<p class="description">Наша компания <span class="bold__font">ООО «КСАН»</span> предлагает <span class="bold__font">Ксантановую камедь</span> &ndash; жизненно важный полимер для пищевой, нефтегазовой, фармацевтической и косметической промышленности. На сегодняшний день 100% ксантана в России &ndash; импортное, что создает риски для стратегических отраслей. Новый, высокоэффективный изолят бактерии <span class="bold__font bold__font_italic">Xanthomonas campestris</span> представляет собой штамм, обладающий улучшенными характеристиками по сравнению с ранее известными изолятами. Эта бактерия широко используется в биотехнологии благодаря своей способности продуцировать ряд ценных соединений, включая биополимеры, ферменты и биологически активные вещества.
 			</p>
 			<h3 class="section__title">Важнейшие характеристики нового изолята</h3>
 			<ul>
@@ -96,7 +96,7 @@
 				<div class="advantages__text">
 					<h3 class="section__title">Основные приемущества нашего продукта</h3>
 					<p class="description">
-						Мы предлагаем готовое решение &ndash; новый, высокоэффективный изолят бактерии <span class="bold__font">Xanthomonas campestris</span>, позволяющий запустить рентабельное отечественное производство ксантановой камеди.
+						Мы предлагаем готовое решение &ndash; новый, высокоэффективный изолят бактерии <span class="bold__font bold__font_italic">Xanthomonas campestris</span>, позволяющий запустить рентабельное отечественное производство ксантановой камеди.
 					</p>
 					<ul class="advantages__list">
 						<li class="description description__list-item ">
@@ -117,7 +117,7 @@
 					     height="700"
 					     loading="lazy"
 					/>
-					<p>Чашки петри с культурой бактерий <span class="bold__font">Xanthomonas campestris</span></p>
+					<p>Чашки петри с культурой бактерий <span class="bold__font bold__font_legend">Xanthomonas campestris</span></p>
 				</div>
 			</div>
 		</section>
@@ -132,11 +132,11 @@
 					     height="450"
 					     loading="lazy"
 					/>
-					<p>Чашка петри с культурой бактерий <span class="bold__font">Xanthomonas campestris</span></p>
+					<p>Чашка петри с культурой бактерий <span class="bold__font bold__font_legend">Xanthomonas campestris</span></p>
 				</div>
 				
 				<div class="description">
-					Наш штамм <span class="bold__font">Xanthomonas campestris </span>является результатом целенаправленных научных исследований, включающих сбор образцов, селекцию, выделение чистой культуры и всестороннее тестирование.
+					Наш штамм <span class="bold__font bold__font_italic">Xanthomonas campestris </span>является результатом целенаправленных научных исследований, включающих сбор образцов, селекцию, выделение чистой культуры и всестороннее тестирование.
 					<ul class="technology__list">
 						<li class="description description__list-item">
 							1. Продуктивность по ксантановой камеди не менее чем на 20% выше, чем у эталонных штаммов из коллекции ВКПМ.
