--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 					<li class="header__item">
 						<a class="header__link" href="#main">Главная</a>
 					</li>
-					<li class="header__item">
-						<a class="header__link" href="#catalog">Каталог</a>
-					</li>
+<!--					<li class="header__item">-->
+<!--						<a class="header__link" href="#catalog">Каталог</a>-->
+<!--					</li>-->
 					<li class="header__item">
 						<a class="header__link" href="#about">О компании</a>
 					</li>
@@ -92,6 +92,20 @@
 				</li>
 			</ul>
 			
+			<h3 class="section__title">Применение</h3>
+			<ul>
+				<li class="description description__list-item">
+					<span class="description__title">Пищевая промышленность:</span> Ксантан, производимый новым изолятом, используется в качестве загустителя и стабилизатора в продуктах питания.
+				</li>
+				<li class="description description__list-item">
+					<span class="description__title">Косметология:</span> Биополимеры, полученные из бактерий, применяются в производстве кремов, шампуней и других косметических средств.
+				</li>
+				<li class="description description__list-item">
+					<span class="description__title">Фармацевтика:</span> Ферменты и биологически активные вещества, вырабатываемые бактериями, используются в разработке лекарственных препаратов.
+				</li>
+			</ul>
+			<p class="description">Таким образом, новый, высокоэффективный изолят бактерии <span class="bold__font bold__font_legend">Xanthomonas campestris</span> является перспективным инструментом для развития биотехнологических процессов и производства широкого спектра продукции.</p>
+			
 			<div class="advantages__block">
 				<div class="advantages__text">
 					<h3 class="section__title">Основные приемущества нашего продукта</h3>
@@ -117,7 +131,7 @@
 					     height="700"
 					     loading="lazy"
 					/>
-					<p>Чашки петри с культурой бактерий <span class="bold__font bold__font_legend">Xanthomonas campestris</span></p>
+					<p>Чашки Петри с культурой бактерий <span class="bold__font bold__font_legend">Xanthomonas campestris</span></p>
 				</div>
 			</div>
 		</section>
@@ -132,7 +146,7 @@
 					     height="450"
 					     loading="lazy"
 					/>
-					<p>Чашка петри с культурой бактерий <span class="bold__font bold__font_legend">Xanthomonas campestris</span></p>
+					<p>Чашка Петри с культурой бактерий <span class="bold__font bold__font_legend">Xanthomonas campestris</span></p>
 				</div>
 				
 				<div class="description">
@@ -157,66 +171,66 @@
 			</div>
 		</section>
 		
-		<section class="peculiarities">
-			<h3 class="section__title">Особенности посева дражированных семян</h3>
-			<ul class="peculiarities__list">
-				<li class="peculiarities__item description">
-					Обязательный полив до и после посева. Для прорастания семени плотная оболочка должна размокнуть
-					и разрушиться. Если влаги будет недостаточно, семя может не прорасти. Поэтому почву перед
-					посевом хорошо увлажняют, а после посева и заделки семян снова аккуратно поливают.
-				</li>
-				<li class="peculiarities__item description">
-					Дражированные семена — это надежный способ получения высоких урожаев. Их удобно сеять, оболочка
-					обеспечивает лучшую всхожесть и сильный старт для растений.
-				</li>
-			</ul>
-		</section>
-		
-		<section id="catalog" class="catalog">
-			<h3 class="section__title">Каталог</h3>
-			<div class="catalog__cards">
-				<figure class="catalog__card">
-					<img src="images/sample1.png" alt="образец семян один">
-					<figcaption class="catalog__caption">Образец 1</figcaption>
-				</figure>
-				<figure class="catalog__card">
-					<img src="images/sample2.png" alt="образец семян один">
-					<figcaption class="catalog__caption">Образец 2</figcaption>
-				</figure>
-			</div>
-			<div class="card__description">
-				<p class="description">
-					<span>Образец N 1.</span> Семена эспарцета песчаного. В состав оболочки входит органическая и
-					минеральная основа; природный биополимер, способный впитывать и удерживать влагу, оставляя её
-					доступной для молодых проростков. Кроме того, одним из компонентов является вытяжка растительного
-					сырья, стимулирующая бурный старт семян и их "дружные" всходы, что несомненно является конкурентным
-					преимуществом.
-				</p>
-				<p class="description">
-					<span>Образец N 2.</span> Семена эспарцета песчанного дражированные.
-					Состав оболочки представлен сложной многокомпонентной основой, нацеленной на "игру вдолгую",
-					состоящей из органической и минеральной основы, природного биополимера и естественных стимуляторов
-					роста, участвующих в процессах роста и энергетического обмена клеток растений.
-				</p>
-			</div>
-		</section>
-		
-		<section class="use">
-			<h3 class="section__title">Применение</h3>
-			<p class="description">Наш предлагаемый продукт предназначен для сельского хозяйства и направлен на снижение
-				климатических и биотических рисков в зоне рискованного земледелия (65% территории России), а также
-				рациональное (точечное) применение удобрений.
-				Проект нацелен на получение посевного материала высокой приживаемости и усиленной энергии прорастания,
-				что обеспечивается наличием доступных для растений питательных веществ из созданной оболочки. Это
-				позволяет получать более жизнестойкие растения, особенно на ранних стадиях, когда всходы уязвимы к
-				внешним негативным факторам.
-				Дражированные семена широко используются в сельском хозяйстве для выращивания различных культур, включая
-				овощи, зерновые и декоративные растения. Они особенно популярны среди садоводов и огородников, так как
-				позволяют получить здоровые и крепкие растения.<br>
-				Таким образом, дражированные семена являются эффективным инструментом для повышения урожайности и защиты
-				растений от неблагоприятных факторов внешней среды.
-			</p>
-		</section>
+<!--		<section class="peculiarities">-->
+<!--			<h3 class="section__title">Особенности посева дражированных семян</h3>-->
+<!--			<ul class="peculiarities__list">-->
+<!--				<li class="peculiarities__item description">-->
+<!--					Обязательный полив до и после посева. Для прорастания семени плотная оболочка должна размокнуть-->
+<!--					и разрушиться. Если влаги будет недостаточно, семя может не прорасти. Поэтому почву перед-->
+<!--					посевом хорошо увлажняют, а после посева и заделки семян снова аккуратно поливают.-->
+<!--				</li>-->
+<!--				<li class="peculiarities__item description">-->
+<!--					Дражированные семена — это надежный способ получения высоких урожаев. Их удобно сеять, оболочка-->
+<!--					обеспечивает лучшую всхожесть и сильный старт для растений.-->
+<!--				</li>-->
+<!--			</ul>-->
+<!--		</section>-->
+<!--		-->
+<!--		<section id="catalog" class="catalog">-->
+<!--			<h3 class="section__title">Каталог</h3>-->
+<!--			<div class="catalog__cards">-->
+<!--				<figure class="catalog__card">-->
+<!--					<img src="images/sample1.png" alt="образец семян один">-->
+<!--					<figcaption class="catalog__caption">Образец 1</figcaption>-->
+<!--				</figure>-->
+<!--				<figure class="catalog__card">-->
+<!--					<img src="images/sample2.png" alt="образец семян один">-->
+<!--					<figcaption class="catalog__caption">Образец 2</figcaption>-->
+<!--				</figure>-->
+<!--			</div>-->
+<!--			<div class="card__description">-->
+<!--				<p class="description">-->
+<!--					<span>Образец N 1.</span> Семена эспарцета песчаного. В состав оболочки входит органическая и-->
+<!--					минеральная основа; природный биополимер, способный впитывать и удерживать влагу, оставляя её-->
+<!--					доступной для молодых проростков. Кроме того, одним из компонентов является вытяжка растительного-->
+<!--					сырья, стимулирующая бурный старт семян и их "дружные" всходы, что несомненно является конкурентным-->
+<!--					преимуществом.-->
+<!--				</p>-->
+<!--				<p class="description">-->
+<!--					<span>Образец N 2.</span> Семена эспарцета песчанного дражированные.-->
+<!--					Состав оболочки представлен сложной многокомпонентной основой, нацеленной на "игру вдолгую",-->
+<!--					состоящей из органической и минеральной основы, природного биополимера и естественных стимуляторов-->
+<!--					роста, участвующих в процессах роста и энергетического обмена клеток растений.-->
+<!--				</p>-->
+<!--			</div>-->
+<!--		</section>-->
+<!--		-->
+<!--		<section class="use">-->
+<!--			<h3 class="section__title">Применение</h3>-->
+<!--			<p class="description">Наш предлагаемый продукт предназначен для сельского хозяйства и направлен на снижение-->
+<!--				климатических и биотических рисков в зоне рискованного земледелия (65% территории России), а также-->
+<!--				рациональное (точечное) применение удобрений.-->
+<!--				Проект нацелен на получение посевного материала высокой приживаемости и усиленной энергии прорастания,-->
+<!--				что обеспечивается наличием доступных для растений питательных веществ из созданной оболочки. Это-->
+<!--				позволяет получать более жизнестойкие растения, особенно на ранних стадиях, когда всходы уязвимы к-->
+<!--				внешним негативным факторам.-->
+<!--				Дражированные семена широко используются в сельском хозяйстве для выращивания различных культур, включая-->
+<!--				овощи, зерновые и декоративные растения. Они особенно популярны среди садоводов и огородников, так как-->
+<!--				позволяют получить здоровые и крепкие растения.<br>-->
+<!--				Таким образом, дражированные семена являются эффективным инструментом для повышения урожайности и защиты-->
+<!--				растений от неблагоприятных факторов внешней среды.-->
+<!--			</p>-->
+<!--		</section>-->
 		
 		<section id="about" class="about">
 			<h3 class="section__title">О компании</h3>
@@ -231,41 +245,44 @@
 		<section id="contacts" class="contacts">
 			<div class="contacts__form">
 				<h3 class="section__title">Наши реквизиты</h3>
-				<p class="contacts__form-text">Общество с ограниченной ответственностью <strong>ООО «СемБиоТех»</strong>
+				<p class="contacts__form-text">
+					Общество с ограниченной ответственностью <strong> ООО «КСАН»</strong>
 				</p>
 				<div class="buttons">
 					<button id="detailsId" class="button__email button__email_details">Наши реквизиты</button>
-					<a class="button__email" href="mailto:batkinalexandr@yandex.ru">Написать письмо</a>
+					<a class="button__email" href="mailto:s–pankratov2000@mail.ru">Написать письмо</a>
+				</div>
+				<div class="">
+						<p class="description "><span>Готовы обсудить приобретение изолята или лицензионное соглашение?</span></p>
+						<p class="description">Мы открыты для сотрудничества с промышленными партнерами, заинтересованными в организации собственного производства ксантановой камеди.</p>
+						<p class="description">По вопросам приобретения и сотрудничества обращайтесь:</p>
+						<p class="description">ФИО: Панкратов Сергей Юрьевич</p>
+						<p class="description">Email: <a target="_blank" href="mailto:s–pankratov2000@mail.ru">Написать письмо</a></p>
+						<p class="description">Телефон: <a target="_blank" href="tel:+79132302792">8–913–230–27–92</a></p>
+						<p class="description">Местонахождение: Алтайский край, Ключевский р-н, с. Северка, ул. Юбилейная д.5., кв. 1.</p>
 				</div>
 				
 				<div class="details">
 					<img class="icon__close" src="./images/icon-close.png" alt="close">
-					<p class="details__item">Название: ООО «СемБиоТех»</p>
-					<p class="details__item">Адрес: Юридический и фактический адрес: 658969, Алтайский край,
-						Михайловский р-н, рп Малиновое
-						Озеро, ул Пушкина, д. 9</p>
-					<p class="details__item">ИНН КПП: 2258005617 / 225801001</p>
-					<p class="details__item">ОГРН: 1242200017399</p>
-					<p class="details__item">ОКВЭД: 72.11</p>
-					<p class="details__item">ОКПО: 82753806</p>
-					<p class="details__item">Р/сч.: 40702810502000405615 в ПАО «Сбербанк России»</p>
-					<p class="details__item">БИК: 040173604, К/сч.: 30101810200000000604</p>
+					<p class="details__item">Название: ООО «КСАН»</p>
+					<p class="details__item">Юридический адрес: Алтайский край, Ключевский р-н, с. Северка, ул. Юбилейная д. 5., кв. 1.</p>
+					<p class="details__item">ИНН КПП: 2248006026 / 224801001</p>
+					<p class="details__item">ОГРН: 1242200016960</p>
 				</div>
 			</div>
 			<div id="map" class="map">
 				<address class="description description__map-address ">
-					Юридический и фактический адрес: 658969, Алтайский край, Михайловский р-н, рп Малиновое Озеро, ул
-					Пушкина, д. 9
+					Алтайский край, Ключевский р-н, с. Северка, ул. Юбилейная д. 5., кв. 1.
 				</address>
-				<script type="text/javascript" charset="utf-8" async
-				        src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A6a027eb05f32ac3a03cfe6cb0cfbbcf7d903b114caf24be8e8bbdd729c0c892b&amp;max-width=525&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
+				<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A4ef7b46c9380c3f64f9466ac3eae7bf35058671caee959527023403873365410&amp;width=755&amp;height=489&amp;lang=ru_RU&amp;scroll=true">
+				</script>
 			</div>
 		</section>
 	</div>
 </main>
 <footer class="footer">
 	<div class="wrapper__header">
-		<a class="footer__email" href="mailto:batkinalexandr@yandex.ru">batkinalexandr@yandex.ru</a>
+		<a class="footer__email" href="mailto:s–pankratov2000@mail.ru">s–pankratov2000@mail.ru</a>
 	</div>
 </footer>
 </body>
