--- a/index.html
+++ b/index.html
@@ -235,9 +235,7 @@
 		<section id="about" class="about">
 			<h3 class="section__title">О компании</h3>
 			<p class="description">
-				Компания ООО «СемБиоТех» создана при грантовой поддержке Фонда содействия инновациям (fasie.ru) в рамках
-				программы «Студенческий стартап» по направлению «Биотехнологии», договор 3720ГССС15-L/99703 от
-				28.10.2024.
+				Компания ООО ООО «КСАН» создана ...
 			
 			</p>
 		</section>
