--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 				<li class="header__item-mobile">
 					<a class="header__link-mobile" href="#main">Главная</a>
 				</li>
-				<li class="header__item-mobile">
-					<a class="header__link-mobile" href="#catalog">Каталог</a>
-				</li>
+<!--				<li class="header__item-mobile">-->
+<!--					<a class="header__link-mobile" href="#catalog">Каталог</a>-->
+<!--				</li>-->
 				<li class="header__item-mobile">
 					<a class="header__link-mobile" href="#about">О компании</a>
 				</li>
