--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 						<div class="details__container">
 							<p class="details__item">Название: ООО «КСАН»</p>
 							<address class="details__item">Юридический адрес: Алтайский край, Ключевский р-н, с. Северка, ул. Юбилейная д. 5., кв. 1.</address>
-							<p class="details__item">ИНН КПП: 2248006026 / 224801001</p>
+							<p class="details__item">ИНН / КПП: 2248006026 / 224801001</p>
 							<p class="details__item">ОГРН: 1242200016960</p>
 						</div>
 					</div>
