--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 					<span class="description__title">Фармацевтика:</span> Ферменты и биологически активные вещества, вырабатываемые бактериями, используются в разработке лекарственных препаратов.
 				</li>
 			</ul>
-			<p class="margin-bottom description description__list-item">Таким образом, новый, высокоэффективный изолят бактерии <span class="bold__font bold__font_legend">Xanthomonas campestris</span> является перспективным инструментом для развития биотехнологических процессов и производства широкого спектра продукции.</p>
+			<p class="margin-bottom description description__list-item">Таким образом, новый, высокоэффективный изолят бактерии <span class="bold__font bold__font_italic">Xanthomonas campestris</span> является перспективным инструментом для развития биотехнологических процессов и производства широкого спектра продукции.</p>
 			
 			<div class="advantages__block">
 				<div class="advantages__text">
